# tinyX

./: README.md
crates/libtiny_client/: Cargo.toml
crates/libtiny_client/examples/: ecdsa.rs
crates/libtiny_client/src/: lib.rs  state.rs
crates/libtiny_logger/src/: lib.rs
crates/libtiny_tui/examples/: chat.rs  text.rs
crates/libtiny_tui/src/: config.rs  key_map.rs  lib.rs  messaging.rs  notifier.rs  tab.rs  test_utils.rs  tui.rs  utils.rs
crates/libtiny_tui/src/msg_area/: line.rs  mod.rs  scrollbar.rs
crates/libtiny_tui/src/tests/: layout.rs  mod.rs  resize.rs
crates/tiny/: Cargo.toml  config.yml
crates/tiny/src/: cmd.rs  config.rs  conn.rs  main.rs  ui.rs
libtiny_tui/: Cargo.toml
libtiny_tui/src/: lib.rs  messaging.rs  spell_check.rs  text_field.rs  tui.rs
libtiny_tui/src/tests/: mod.rs
termbox/src/: lib.rs
